--- a/Final-Report/evaluation.tex
+++ b/Final-Report/evaluation.tex
@@ -1,14 +1,14 @@
-\chapter{Evaluation}
+\chapter{Evaluation}\label{chapter:evaluation}
 
 To evaluate the project researchers at both Imperial College London and Kings College London have been consulted for feedback. Since the evaluation group is relatively small (9 users), the interviews were focused on gaining personal insights, rather than trying to amass data that, due to the sample size, no statistical conclusions could be drawn from.
 
 The feedback sessions took the form of a structured interview where features were demonstrated, discussed and then some more traditional questionnaire questions were asked. I found that the most useful feedback came from informally speaking to the researchers as it gave a more personal glimpse into their world than a questionnaire ever could.
 
-\subsubsection*{Scan Simulation}
+\section{Scan Simulation}\label{evaluation:scan_simulation}
 The feedback required for scan simulation was firstly to determine whether or not this would be a useful tool for the researchers. If it was, then the limitations of the current implementation needed to be found to guide the development. In particular are all the parameters usually present when setting up an MRI scan available and what other artefacts are there that would be useful to simulate?
 
-\subsubsection*{Reconstruction}
+\section{Reconstruction}\label{evaluation:reconstruction}
 The purpose of this part of the plugin was to get an idea of how researchers feel about manually labelling slice stacks to improve the quality of the reconstruction. 
 
-\subsubsection*{Visualization}
+\section{Visualization}\label{results:visualization}
 There are three things that make a good visualization. Firstly you must be able to understand what it is showing; a visualization can look fantastic but if you can't understand what you're looking at then it is useless. Secondly it must be clear; an uncertainty visualization should communicate the uncertainty without unnecessary complication which will distract the viewer from what is important. Thirdly it must be configurable; being able to tweak a visualization to highlight different areas of interest makes it more flexible and useful in a wider range of scenarios.
