--- a/Final-Report/results.tex
+++ b/Final-Report/results.tex
@@ -4,7 +4,7 @@
 %% ------- SCAN SIMULATION ------- %%
 %% ------------------------------- %%
 
-\section{Scan Simulation}
+\section{Scan Simulation}\label{results:scan_simulation}
 The researchers were asked 'How useful is this feature for you?' and their responses are shown below in figure \ref{fig:graph_scansimulation_1}.
 
 \begin{figure}[h]
@@ -59,7 +59,7 @@ The question about the realism required of the simulation prompted the largest r
 %% ------------------------------- %%
 
 \newpage
-\section{Reconstruction}
+\section{Reconstruction}\label{results:reconstruction}
 When asked 'How important is it for you to manually guide the reconstruction process?' the majority preferred to have some degree of control over it. See figure \ref{fig:graph_reconstruction_1}. Those who were less concerned about this either weren't involved in the reconstruction process (and put 1) or felt that they do like the ability to guide it but would greatly prefer if it were automated.
 
 \begin{figure}[h]
@@ -118,7 +118,7 @@ Another issue raised was that there was ambiguity deciding which part of a landm
 %% ----------------------------------------- %%
 
 \newpage
-\section{Visualizations - Uncertainty}
+\section{Uncertainty Visualization}\label{results:uncertainty_visualization}
 With these three principles in mind the users were asked three questions for each visualization. The first they were asked was 'How easy was it to understand what the visualization was showing?'. The results for each visualization are shown in figure \ref{fig:eval_visualization_q1}.
 
 \begin{figure}[H]
@@ -220,7 +220,7 @@ A common insight for each of the visualizations was that it would be useful to h
 %% --------------------------------------- %%
 
 \newpage
-\section{Visualizations - Next Scan Plane}
+\section{Next Scan Plane Visualization}\label{results:next_scan_plane}
 The same three principles used to evaluate the uncertainty visualizations apply to visualizing the next scan plane. The only difference is that the information being communicated is focused on a scan, not the uncertainty.
 
 The researchers were initially asked 'How easy was it to understand what the visualization was showing?'. The responses are shown in figure \ref{fig:eval_next_scan_plane_q1}.
