--- a/Final-Report/title.tex
+++ b/Final-Report/title.tex
@@ -22,7 +22,7 @@
 %----------------------------------------------------------------------------------------
 
 % \textsc{\LARGE Imperial College London}\\[0.5cm] % Name of your university/college
-\textsc{\Large Department of Computing}\\[0.5cm] % Major heading such as course name
+\textsc{\Large Department of Computing}\\[1.0cm] % Major heading such as course name
 % \textsc{\large Minor Heading}\\[0.5cm] % Minor heading such as course title
 
 %----------------------------------------------------------------------------------------
@@ -30,7 +30,7 @@
 %----------------------------------------------------------------------------------------
 
 \HRule \\[0.4cm]
-{ \LARGE \bfseries Visualizing uncertainty in super-resolution fetal MRI.}\\[0cm] % Title of your document
+{ \LARGE \bfseries Evaluating uncertainty in motion-corrected fetal MRI.}\\[0cm] % Title of your document
 \HRule \\[1.5cm]
  
 %----------------------------------------------------------------------------------------
@@ -49,7 +49,7 @@ Sam Esgate % Your name
 \emph{Supervisor:} \\
 Dr. Bernhard Kainz % Supervisor's Name
 \end{flushright}
-\end{minipage}\\[7cm]
+\end{minipage}\\[10cm]
 
 % If you don't want a supervisor, uncomment the two lines below and remove the section above
 %\Large \emph{Author:}\\
