--- a/Final-Report/implementation.tex
+++ b/Final-Report/implementation.tex
@@ -1,18 +1,17 @@
 \chapter{Implementation}\label{chapter:implementation}
 
-This project has been implemented as an MITK plugin. MITK, the Medical Imaging Interaction Toolkit, is a free open-source software system for the development of interactive medical image processing software. It combines ITK (for image processing) and VTK (for visualization) together with a basic application, the MITK Workbench, that can be extended with plugins. The UI for the plugin is based on Qt.
+This project has been implemented as an MITK plugin. MITK, the Medical Imaging Interaction Toolkit, is a free open-source software system for the development of interactive medical image processing software. It combines ITK (for image processing) and VTK (for visualization) together with a basic application, the MITK Workbench, that can be extended with plugins. The UI for the plugin uses Qt, a cross-platform UI framework.
 
 \begin{figure}[H]
   \includegraphics[width=\textwidth]{images/tool/mitk.png}
   \caption{MITK Workbench + Plugin}\label{fig:mitkoverview}
 \end{figure}
 
-The plugin developed is a research prototype designed primarily to visualize the uncertainty in MRI reconstructions. It also begins to integrate all parts of the reconstruction pipeline together in one application. Broadly speaking the pipeline can be split into three steps: scan -> reconstruct -> visualize. 
+The plugin developed incorporates features from all three stages of the reconstruction pipeline: scan, reconstruct, visualize. Each stage has a separate page that can be selected from the top of the plugin window. The rest of this chapter explains the features available in each.
 
-Components from each stage have been incorporated into the plugin. Firstly a scan can be simulated by taking a previous reconstruction and resampling it. Then scans, simulated or otherwise, can be used to reconstruct a super-resolution image and optionally landmarks can be provided to guide this process. Finally the reconstructed volume, and associated uncertainty, can be visualized and the next best scan plane can be determined. The rest of this chapter shows the implementation of all of these features.
-
-\section{Scan Simulation}\label{implementation:simulatescan}
-The idea behind simulating a scan is that we can evaluate the performance of reconstruction algorithms if we can compare the result to a known, 'perfect', reconstruction. This idea was used in the paper concerned with finding the optimum scan plane\cite{uncertaintysvd}. The focus of this part of the tool is not to evaluate the effectiveness of this approach, that is a project in it's own right, but to make this simulation easier to perform and customize for future research.
+\clearpage
+\section{Scan Simulation}\label{implementation:scan_simulation}
+The idea behind simulating a scan is that we can evaluate the performance of reconstruction algorithms if we can compare the result to a known, 'perfect', reconstruction. The focus of this part of the tool is not to evaluate the effectiveness of this approach, that is a project in it's own right, but to make this simulation easier to perform and customize for future research.
 
 \begin{wrapfigure}[23]{r}{0.4\textwidth}
   \vspace{-20pt}
@@ -20,7 +19,7 @@ The idea behind simulating a scan is that we can evaluate the performance of rec
   \caption{Controls}\label{fig:scansettings}
 \end{wrapfigure}
 
-The user has a number of controls (see figure \ref{fig:scansettings}) available to tweak:
+The user has a number of controls available to tweak (figure \ref{fig:scansettings}):
 
 \subsubsection*{Scan Dimensions}
 Number of pixels in the scan (x, y, z).
@@ -102,7 +101,7 @@ The uncertainty is linearly scaled so each value is between 0 and 1.
 \begin{wrapfigure}[14]{r}{0.4\textwidth}
   \vspace{-20pt}
   \includegraphics[width=0.4\textwidth]{images/pre-processing.png}
-  \caption{Pre-processing}\label{fig:scansettings}
+  \caption{Pre-processing}\label{fig:pre-processing_settings}
 \end{wrapfigure}
 
 If the uncertainty has no location information (image to world matrix) then it can be aligned with the reconstructed scan. This feature was mainly used to align the artificial test uncertainties to the scan for testing.
@@ -210,7 +209,7 @@ Inverts the normals stored at each point on the surface. Use when normals point 
 \end{figure}
 
 \clearpage
-\subsection{Next Scan Plane}\label{implementation:nextscanplane}
+\subsection{Next Scan Plane}\label{implementation:next_scan_plane}
 The idea behind this visualization is based on research\cite{uncertaintysvd} which uses SVD to find the optimum position and direction to scan next given the current uncertainty. With this knowledge the scanning process can continually target areas of uncertainty to optimize the quality of the reconstruction.
 
 \begin{wrapfigure}[18]{r}{0.4\textwidth}
